# 2017-AFP

./: Makefile  README.md  assignments.md  background.md  index.html  schedule.html
_layouts/: default.html
_posts/: 2017-02-14-SlidesAndAssignments.md  2017-02-28-Assigments.md  2017-03-09-Assigment4.md  2017-03-16-AgdaAssignments.md  2017-03-23-AgdaCode.md  2017-04-06-Wolds.md
assignments/A1/3370798/: .Ass1.hs.swp  .ass1Marinus3370798.cabal.swp  Ass1.hs  ass1Marinus3370798.cabal  cabal.sandbox.config  proof.txt  reflection.txt  results.txt
assignments/A1/3370798/.cabal-sandbox/x86_64-linux-ghc-7.10.3-packages.conf.d/: ass1Marinus3370798-0.1.0.0-4187a7ff4f1ae2a8ebf4623ca40fb019.conf  package.cache
assignments/A1/3802337/: reflection.txt  results.txt
assignments/A1/4045483-4131495/: reflection.txt  results.txt
assignments/A1/4102622-4137655/: results.txt  self_results.md
assignments/A1/4133935-4134524/: reflection.txt  results.md
assignments/A1/5597250/: 2418.5597250.AFP5597250.rar  Grading Assignment 1 - from 5597250  results.txt
assignments/A1/5666163/: Grading Assignment 1 - from 5597250  OwnWorkReview.txt
assignments/A1/5681782/: review_from_5666163.txt
assignments/A1/5797780/: results.txt  (+2 more)
assignments/A2/: 2420.3370798.ass2.hs  2420.5597250.AFP5597250.rar  2420.5797780.afp2.txz
assignments/A3/: .#rename.sh  2424.5797780.afp3.txz
assignments/A4/: 2428.5597250.AFP5597250.rar  2428.5797780.afp4.txz
assignments/A5/: .3802337.Exercise.agda  .4045483-4131495.Final.agda  .4134524-4133935.Exercise.agda
slides/: Demo.html  Demo2.html  Demo3.html
(+47 files in other folders)
