name:                ass1Marinus3370798
version:             0.1.0.0

synopsis:            Code for Assignment 1, Marinus Oosters, 3370798            

description:         Code for Assignment 1, Marinus Oosters, 3370798.
                     The proofs are in the included "proof.txt". 

license:             PublicDomain
author:              Marinus Oosters (3370798)

build-type:          Simple

cabal-version:       >=1.10


library
  exposed-modules:     Ass1
  
  build-depends:       base >=4.8 && <4.9
  
  default-language:    Haskell2010
  
